* Several Object changes:
** MMD handling is now more sophisticated, and `$.chained.attr.methods` works.
** switch to Manhattan distance for MMD dispatch on invocants.
** Objects numify to a unique value accessible with `$obj.id()`
** Inheritance has been added.
** Private methods: `method :foo ()` and `$obj.:foo`.
** Private attributes: `has $:foo` now generates private accessors.
** New `./method` syntax implemented.
* Operator Overloading and Defintion added:
** User-defined symbolic postfix and prefix unary functions.
** User-defined symbolic infix functions too.
** Operators can be Unicode too.
** Operators can be chained with `[]` as well.
** Almost all operators, user-defined ones too, can be hypered (`»+«`, `[+]«`,
   etc.).

=== Bundled Modules

* `Inline::Pugs` and `pugs` Perl 5 module to run Pugs inline.
* `fp` module added for functional programming.
* `Net::IRC`, OO version added.
* `Set` now has many overloaded operators.
* `Set::Junction`, Set implemented with Junctions, added.
* `Perl::MetaModel`, prototype of Perl 6 OO meta-model in Perl 6 OO.
* `Test::Builder`, with Perl 6 objects (parses, and mostly works (see tests)).
* `Tree::Simple`, renamed to `Tree` and converted to OO.
* `Locale::KeyedText` re-added (this was our first `ext/` module).

=== Tests, Examples and Documentations

* Many new test and several tests refactored, we now have 5600+ tests.
* Perl6::Rules test suite incorporated into `t/rules/`.
* Hangman IRC bot created from `hangman.p6`.
* OO Wizard RPG game added in `examples/games/`.
* Removed usage of `force_todo()` in favor of `:todo`.
* Perl 6 quick reference documents added to `docs/quickref`.
* Parrot is now include in the Pugs Live CD.
* IRC logfile to HTML converter added.

=== Bug Fixes

* `split//` now attaches the submatches to the resulting list.
* `system()` returns proper exit codes.
* `returns Foo::Bar` from subs/methods now works.
* Post-term code/method invocation in interpolated strings no longer